 * Added cgi/schema to access the repository's schema + schema fixes
 * Ignore blank lines in DOI import and check for "malformed" response

2009-04-07 tdb
 * Refactoured DataObj creation to reduce redundant commits/objects

2009-04-08 tdb
 * Added unit_test for Plugin::Screen

2009-04-15 tdb
 * Removed <div> wrapper from message contents
 * Added a "secure_auto.js" that specifies the correct HTTP paths
 * Added an explicit secure.xml template default (links to secure_auto.js)

2009-04-16 cjg
 * Added JSON support.

2009-04-16 cjg
 * Added config. options and better error handling to JSON code.

2009-04-16 cjg
 * Fixed issue with 403 in JSON, and when eprint not found.

2009-04-16 cjg
 * Fixed issue with non standard DOM in Export::JSON

2009-04-16 cjg+tmb
 * Fix for generate-on-demand of /view/foo/index.html URLs

2009-04-16 tdb
 * get_full_url() returns the correct host/port depending on https
 * Return utf-8 characters when passing Documents to XML::to_string
 * utf8-decode CGI parameters
 * Fixed Phrase Editing to work with new Language internals
 * Accessor methods for getting phrase information: get_phrase_info
 * Refactored Admin::Phrases to greatly improve memory and performance

2009-04-17 tdb
 * Revised PluginFactory API to be more intuitive with existing API
 * Refactored Plugin::Screen->list_items() to use new plugin API
 * Cache the user object

2009-04-20 tdb
 * Removed broken/superfluous replication of require
 * Added rename_field() method to Database.pm to rename meta fields

2009-04-22 tdb
 * MetaFields can now subclass new()
 * Added register_field/unregister_field methods to DataSet
 * Rename Web metafields
 * Construct/deconstruct compound fields from other (prefix-named) fields

2009-04-30 tmb
 * Added hook to allow/deny Web sign-ups from particular email domains

2009-05-11 cjg
 * Turned Search::Condition into a bunch of subclasses.

2009-05-12 cjg
 * First draft of a REST interface.